--- a/js/index.html
+++ b/js/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>VG UI</title>
+    <link rel="stylesheet" href="player/vgplayer.min.css">
+    <script type="text/javascript" src="player/vgplayer.js"></script>
 </head>
 <body>
-
+<div id="pCont"></div>
 <div id="root"></div>
+
 <script src="./index.tsx"></script>
 </body>
 </html>
