--- a/js/index.html
+++ b/js/index.html
@@ -10,6 +10,10 @@
 <div id="pCont"></div>
 <div id="root"></div>
 
+
+<!--<script src="./tests/testDownloadJson.ts"></script>-->
 <script src="./index.tsx"></script>
+<!--<script src="./tests/TestRanges.tsx"></script>-->
+<!--<script src="./tests/asyncTests.ts"></script>-->
 </body>
 </html>
