--- a/js/tests/testSvg.html
+++ b/js/tests/testSvg.html
@@ -12,30 +12,22 @@
 
 </head>
 <body>
+<div>
 
-<svg width="1200" height="150">
+    <svg width="1200" height="150" style="background: grey;">
 
-    <svg width="1200" height="150" viewBox="0 0 1200 150" style="background: grey;">
-        <rect x="0" y="20" width="327.54" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="327.54" y="20" width="12.36" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="339.90000000000003" y="20" width="86.52000000000001" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="426.42" y="20" width="37.08" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="463.5" y="20" width="55.62" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="519.12" y="20" width="6.18" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="525.3" y="20" width="37.08" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="562.38" y="20" width="24.72" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="587.1" y="20" width="24.72" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="611.82" y="20" width="6.18" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="618" y="20" width="24.72" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="642.72" y="20" width="18.54" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="661.26" y="20" width="37.08" height="100" style="fill: rgb(0, 255, 0);"></rect>
-        <rect x="698.34" y="20" width="12.36" height="100" style="fill: rgb(0, 0, 255);"></rect>
-        <rect x="710.7" y="20" width="265.74" height="100" style="fill: rgb(0, 255, 0);"></rect>
+        <svg width="1200" height="150" viewBox="0 0 1200 150" id="svg">
+            <g>
+                <rect x="0" y="20" width="1200" height="100" style="fill: rgb(255, 255, 255);"></rect>
+            </g>
+            <rect x="0" y="20" width="100" height="100" style="fill: rgb(0, 255, 0);"></rect>
+
+        </svg>
+        <g>
+            <rect x="250" y="20" width="4" height="100" style="fill: red;"></rect>
+        </g>
     </svg>
-    <g>
-        <rect x="250" y="20" width="4" height="100" style="fill: red;"></rect>
-    </g>
-</svg>
+</div>
 
 <svg width="1200" height="150" viewBox="0 0 1200 150" preserveAspectRatio="none meet" style="background: grey;">
     <rect x="0" y="20" width="4" height="100" style="fill: rgb(0, 255, 0);"></rect>
