--- a/js/index.html
+++ b/js/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>VG UI</title>
-    <link rel="stylesheet" href="player/vgplayer.min.css">
-    <script type="text/javascript" src="player/vgplayer.js"></script>
+    <link rel="stylesheet" href="./player/vgplayer.min.css">
+    <script type="text/javascript" src="./player/vgplayer.js"></script>
 </head>
 <body>
 <div id="pCont"></div>
 <div id="root"></div>
 
 
-<!--<script src="./tests/testDownloadJson.ts"></script>-->
 <script src="./index.tsx"></script>
-<!--<script src="./tests/TestRanges.tsx"></script>-->
-<!--<script src="./tests/asyncTests.ts"></script>-->
 </body>
 </html>
